syntax = "proto2";
package slg.protocol;
option java_package="com.bonusstudio.slg.protocol";
option java_outer_classname="RankProto";
import "common.proto";

/// -------------------DTO----------------
message PlayerRankDTO {
	required int64 playerId = 1;
	required string icon = 2;
	required int32 rank = 3;//当前排名
	required int32 battle = 4;
	required bool praise = 5; //是否点赞 0 未， 1已
	required int32 lastRank = 6;//前次排名
	required string nickname = 7;
	required int32 aid = 8;//联盟ID
	optional string aname = 9;//联盟名字
}

message AllianceRankDTO
{
	required int32 aid = 1;//联盟ID
	required string aname = 2;//联盟名称
	required int32 icon = 3;//联盟徽章
	required int32 current = 4;//当前人数
	required int32 limit = 5;//人数上限
	required int32 honor = 6;//联盟荣誉
	required int32 lastRank = 7;//上次排名
	required int32 rank = 8;//本次排名
	required string nickname = 9;//盟主名称
}


/// -------------------COMMAND----------------
enum RankCommandId {
	RANK_LIST  		   	= 1901;				  //排行榜信息
    RANK_LIKE       	= 1903;               //排行榜点赞
}

//1901:获取排行榜
message RankRequest {
		
}

message RankResponse{
	repeated PlayerRankDTO players = 1;
	required int32 playerRank = 2; //自己当前排行
	required int32 playerLast = 3; //自己上次排行
	repeated AllianceRankDTO alliances = 4;
	optional int32 allianceRank = 5; //自己当前排行
	optional int32 allianceLast = 6; //自己上次排行
	optional int32 allianceHonor = 7; //自己联盟荣誉
	optional int32 allianceLimit = 8; //自己联盟人数上限
	optional int32 allianceNum = 9; //自己联盟当前人数
}

//1903:排行榜点赞
message LikeRequest {
	required int32 ranking = 1; 		//名次
}

message LikeResponse {
	required int32 ranking = 1; 		//名次
 	required PropertyDTO reward = 2;    //奖励
}

/// -------------------PUSH----------------
enum RankPushId {
    LIKE_TIMES_PUSH  = 51901;      //点赞次数推送
}

message RankLikePush {
	required int32 likeTimes = 1; 		//点了多少次
}